--- a/Practicas/Practica2/README
+++ b/Practicas/Practica2/README
@@ -1,74 +1,144 @@
-ï»¿Arenas OlguÃ­n JosÃ© Gerardo 
-CortÃ©s Reyes Tanya Cecilia 
+FSE 2020-1 -- Practica 2
 
-a) Â¿CuÃ¡l es la razÃ³n principal para usar Linux en el diseÃ±o de Sistemas 
-Embebidos? 
 
-* Se utiliza Linux para el diseÃ±o de Sistemas embebidos debido al 
-gran crecimiento y utilizaciÃ³n de este sistema operativo 
-en distintas industrias. Algunas de las razones de este crecimiento
-se muestran a continuaciÃ³n: 
 
-* Royalies : Linux puede ser desarrollado sin ningun tipo de royalty.
+Nombres de los integrantes:
+Arenas Olguín José Gerardo 
+Cortés Reyes Tanya Cecilia 
 
-* Soporte de Hardware: Linux soporta una gran variedad de dispositivos de hardware,
-incluyendo la mayorÃ­a de las architecturas de CPUs: ARM , Intel x86, MIPS, PowerPC
-y sus respectivas variantes de 32 y 64 bits.
 
-* Redes: Linux soporta una gran variedad de protocolos de red. Aparte de TCP/IP,
-prÃ¡cticamente cualquier protocolo de la capa fÃ­sica esta implementado.
+Comentarios y Respuestas a las preguntas 
 
-* Modularidad: El Stack de Linux estÃ¡ compuesto por varios paquetes de software. 
-Los usuarios pueden personalizar el Stack para que se ajuste exactamente a sus requerimientos.
 
-*Escalabilidad: Linux puede escalar desde sistemas simples de una CPU hasta sistemas multicore, 
-con grandes memorias, varias interfaces de red, etc.
 
-*CÃ³digo Fuente: Tanto el cÃ³digo fuente del Kernel de Linux, 
-asi como el de sus paquetes de software incluidos en el Stack del sistema operativo (Linux OS Stack), 
-estÃ¡ dosponible en forma libre.
+2. Lenguaje ensamblador 
 
-*Soporte para Desarrolladores: Debido a sus caracteristicas de Open Source,
- Linux cuenta con una gran cantidad de desarrolladores activos, 
-los cuales dan soporte rÃ¡pidamente a eventuales nuevos dispositivos de hardware.
+*Invesigue la instrucción swi, sus parámetros y su función dentro
+de un programa .s
 
-*Soporte Comercial: Existe un nÃºmero creciente de vendedores de software y hardware, 
-incluyendo a todos los productores de semiconductores y vendedores de software independientes que 
-actualmente ofrecen productos  y servicios de soporte para Linux.
+La instrucción SWI (Software Interrupt) se usa para ingresar al modo Supervisor y
+configurar la PC para que ejecute la siguiente instrucción en la dirección immed_8
 
-*Herramientas: Linux provee miles de herramientas para desarrollo de software, 
-que van desde compiladores para prÃ¡cticamente todos los lenguajes de programaciÃ³n 
-hasta un nÃºmero creciente de herramientas para el moniteoreo de rendimiento y profiling,
- las cuales son importantes para el desarrollo de sistemas embebidos.
+Sintaxis: SWI immed_8 
+donde immed_8 es una expresión numérica que evalúa un número entero en el rango 0-255
 
-AdemÃ¡s, no hay que olvidar que El nÃºcleo Linux, combinado con un conjunto de algunas otras utilidades de software libre, 
-puede ajustarse dentro del limitado espacio de hardware de los sistemas embebidos. 
-Una instalaciÃ³n tÃ­pica de un Linux embebido ocupa en promedio 2 MB.
+Fuentes: http://infocenter.arm.com/help/index.jsp?topic=/com.arm.doc.dui0068b/BABFCEEG.html
 
-b) Investigue los mÃ©todos (formas) de conectarse a una Raspberry Pi
+3. Manejando cadenas 
 
-*SSH: Si lo que queremos es conectarnos de forma remota a un terminar para utilizar
-nuestro dispositivo en modo texto, el protocolo SSH es el que mejor se adapta a nuestras necesidades. 
+En el programa hello.s, comente el código para describir su funcionamiento. En el archivo README, ponga
+los comentarios para dichas lineas, describiendo su funcionamiento y diga conceptualmente que es lo que el
+código está haciendo.
 
-Por lo general, en muchas de las distribuciones Linux (especialmente aquellas pensadas para una administraciÃ³n remota, 
-como Raspbian, el SO del Raspberry Pi) las conexiones SSH estÃ¡n habilitadas por defecto.
-AdemÃ¡s, el protocolo SSH tambiÃ©n nos permite hacer uso del protocolo SFTP para poder acceder a todos los archivos
-almacenados en el servidor a travÃ©s del protocolo FTP de forma segura y cifrada.
+	.text
+	.global _start
 
-*VNC: Mientras que la conexiÃ³n SSH es muy Ãºtil  para conectarnos de forma remota a una terminal,
-si lo quequeremos es poder hacer uso de la interfaz grÃ¡fica de nuestro ordenador debemos recurrir a otras aplicaciones que nos
-permiten utilizar en modo grÃ¡fico nuestro ordenador, como es el caso de VNC.
-Con VNC podremos conectarnos desde cualquier lugar a nuestro servidor y 
-tener control total sobre el escritorio del mismo. Eso sÃ­, puede que nos encontremos con algunas limitaciones, como, por ejemplo,
-una tasa de refresco muy lenta que hace que sean imposibles ciertas tareas, como ver vÃ­deos.
+_start:
 
-*RDP: RDP es el protocolo propietario de Microsoft que nos permite conectarnos de forma remota a cualquier ordenador con Windows y 
-administrarlo fÃ¡cilmente sin depender de otras aplicaciones. Aunque esta herramienta viene instalada por defecto en todos los Windows,
-si queremos utilizarla desde otros sistemas operativos, como Linux, es necesario instalar la versiÃ³n no oficial del protocolo 
-de manera que podamos establecer conexiÃ³n con Ã©l.
+	@ Escribe 4 en r7 
+	mov	r7,#4
+	@Escribe 1 en r0 
+	mov	r0,#1
+	
+        @Guarda en r1 la dirección de memoria donde está almacenada message
+	ldr	r1,=message
+	@ Escribe 14 en r2
+	
+        mov 	r2,#14
+	@ Genera llamada al supervisor
+	svc	#0
+	@Escribe 1 en r7
+	mov	r7,#1
+	@Escribe 0 en r0
+	mov	r0,#0
+	@Genera llamada al supervisor 
+	svc	#0
+	
+	@ A partir de .data se enumeran variables con valor inicial
+       .data
+
+message:
+
+	@Ensambla cada cadena en direcciones consecutivas
+       .ascii "Hola mundo\n"
+
+
+El código escribe valores correspondientes a diferentes registros para finalmente
+almacenar en uno de los registros la dirreción de memoria donde se encuentra una 
+etiqueta (función) la cual contiene la instrucción .ascii la cual ensambla una 
+cadena dada en las direcciones consecutivas. Se debe aclarar que el registro consecutivo
+al registro que contiene la dirección de la etiqueta (en este caso r2) reserva el 
+espacio necesario para guardar la cadena en su totalidad y caracter por caracter 
+
+Referencias: https://eprints.ucm.es/27330/1/FC_ManualLaboratorio.pdf
+
+5. Preguntas
+
+(a) ¿Cuál es la diferencia entre las instrucciones swi 0x0, svc #0 y bx lr? 
+
+* Tanto swi como svc son instrucciones que causan excpeciones. Lo que provoca que
+cambien a modo Supervisor lo que permite configurar la PC para ejecutar la siguiente
+instrucción en la dirección indicada. SVC fue llamado SWI en versiones anteriores
+al lenguaje ensamblador ARM.
+
+La instrucción bx lr simplemente nos permite retornar de una subrutina, es decir
+las tres instrucciones nos permiten realizar saltos aunque de manera distinta.  
+
+(b)A que se refiere la instrucción .balign 4 en el lenguaje ensamblador para ARM? 
+
+La directiva .balign N le indica al ensamblador que el siguiente dato que vaya a 
+reservarse o inicializarse, debe comenzar en una dirección de memoria múltiplo de 
+N. En este caso, se le inica al ensamblador que las siguientes direcciones a reservar
+en la memoria deben comenzar con múltiplos de 4
+
+(c) ¿Cuántas instrucciones en lenguaje ensamblador hay para la arquitectura ARM11
+y cuántos modos de direccionamiento hay (mencionelos)? 
+
+Dentro de la arquitectura ARM11 existen dos conjuntos de instrucciones: ARM y THUMB
+Cabe destacar que los modos de direccionamiento  están relacionadas con los conjuntos
+de instrucciones que se utilicen. Por lo que un juego de instrucciones THUMB no tendrá
+los mismos modos de direccionamiento que un conjunto de instrucciones ARM debido a que 
+ARM utiliza instrucciones fijas de 32 bit mientras que THUMB utiliza Instrucciones fijas 
+de 16 bits. 
+
+-- Modos de direccionamiento ARM
+
+* Inmediato (o literal): En este modo es el operando el que figura en la instrucción no su 
+dirección
+
+* Directo: El campo de operando en la instrucción contiene la dirección en memoria donde se 
+encuentra el operando.
+
+*Indirecto: El campo de operando contiene una dirección de memoria, en la que se encuentra la dirección
+efectiva del operando.
+
+--Modos de direccionamiento THUMB
+
+*Directo a Registro: el operando se encuentra en un registro. 
+En la instrucción simplemente se debe codificar en qué registro se encuentra el operando
+ 
+*Inmediato: En el modo de direccionamiento inmediato, el operando está en la
+propia instrucción
+
+*Relativo a registro con desplazamiento: , la dirección efectiva del operando es una dirección de memoria
+que se obtiene sumando el contenido de un registro y un desplazamiento
+especificado en la propia instrucción
+
+*Relativo a registo con registro de desplazamiento: La dirección efectiva del operando es una dirección de
+memoria que se obtiene sumando el contenido de dos registros. Por tanto, si un operando utiliza este modo de direccionamiento, el formato de
+instrucción deberá proporcionar dos campos para dicho operando: uno para cada registro.
+
+De manera general el conjunto de todos los direccionamientos y las instrucciones, forman un aproximado
+de más de 100 instrucciones.
 
 Referencias: 
+https://riuma.uma.es/xmlui/bitstream/handle/10630/10214/LibroDePracticas.pdf?sequence=1&isAllowed=y
+http://lorca.act.uji.es/libro/practARM/CAP01_ebook.pdf
+https://eprints.ucm.es/27330/1/FC_ManualLaboratorio.pdf
+http://www.keil.com/support/man/docs/armasm/armasm_dom1361289909139.htm
+https://heyrick.eu/assembler/swi.html
+http://lorca.act.uji.es/libro/practARM/CAP04_ebook.pdf
+http://www.electron.frba.utn.edu.ar/upload/Materias/95-0429/archivos/2008/Guia_de_clase_Microcontroladors_de_32_bits_%20ARM7.pdf
+https://books.google.com.mx/books?id=aBPTCQAAQBAJ&printsec=frontcover&source=gbs_ge_summary_r&cad=0#v=onepage&q=3.71&f=false
 
-* https://www.redeszone.net/2017/05/12/controlar-remota-linux-raspberry-pi/
-* https://github.com/ASTROINGENIERIA/ASTROUFRO/wiki/Linux-para-Sistemas-Embebidos
-* http://www.sase.com.ar/2012/files/2012/09/Linux-para-sistemas-embebidos-SASE-2012.pdf
+
